	PR c++/89070 - bogus [[nodiscard]] warning in SFINAE.

This is a complaint that we issue a [[nodiscard]] warning even in SFINAE
contexts.  Here 'complain' is tf_decltype, but not tf_warning so I guess
we can fix it as below.

	* cvt.c (convert_to_void): Guard maybe_warn_nodiscard calls with
	tf_warning.

	* g++.dg/cpp1z/nodiscard7.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@278147 138bc75d-0d04-0410-961f-82ee72b054a4